--- a/graphic/style.css
+++ b/graphic/style.css
@@ -1,11 +1,63 @@
+/* Style pour le header */
+header {
+    display: block;
+    background-color: rgb(77, 77, 77);
+    padding: 20px;
+    text-align: center;
+    color: white;
+    font-size: 1.6em;
+    text-shadow: 
+        -1px -1px 0 #000,  
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
+}
+
+/* Style pour le background global */
 body {
     display: block;
+    background-color: rgb(255, 255, 255);
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
 }
 
-background {
-    background-color: bisque;
+/* Style pour le footer */
+footer {
+    display: block;
+    background-color: darkslategray;
+    border: 2px solid black;
+    padding: 10px;
+    text-align: center;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
 }
 
-header {
-    background-color: darkolivegreen;
+/* Style pour le menu sous le header */
+nav {
+    display: flex;
+    justify-content: center;
+    background-color: rgb(77, 77, 77);
+    padding: 0;
+    border-bottom: 2px solid black;
+    border-top: 2px solid black;
+}
+
+nav a {
+    display: inline-block;
+    text-decoration: none;
+    padding: 1em;
+    margin: 0;
+    transition: background-color 0.3s;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    color: white;
+    text-decoration: none;
+    flex-grow: 1;
+    text-align: center; 
+}
+
+nav a:hover {
+    background-color: rgb(61, 61, 61);
 }
