--- a/graphic/style.css
+++ b/graphic/style.css
@@ -1,31 +1,31 @@
 /* Style pour le header */
 header {
     display: block;
-    background-color: rgb(77, 77, 77);
+    background-color: rgb(33, 55, 21);
     padding: 20px;
     text-align: center;
-    color: white;
     font-size: 1.6em;
-    text-shadow: 
-        -1px -1px 0 #000,  
-        1px -1px 0 #000,
-        -1px 1px 0 #000,
-        1px 1px 0 #000;
+
 }
 
 /* Style pour le background global */
 body {
     display: block;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255));
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    color: white;
+}
+
+section {
+    color: black;
 }
 
 /* Style pour le footer */
 footer {
     display: block;
-    background-color: darkslategray;
+    background-color: rgb(33, 55, 21);
     border: 2px solid black;
     padding: 10px;
     text-align: center;
@@ -38,7 +38,7 @@ footer {
 nav {
     display: flex;
     justify-content: center;
-    background-color: rgb(77, 77, 77);
+    background-color: rgb(255, 255, 255);
     padding: 0;
     border-bottom: 2px solid black;
     border-top: 2px solid black;
@@ -52,12 +52,20 @@ nav a {
     transition: background-color 0.3s;
     border-left: 1px solid black;
     border-right: 1px solid black;
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     flex-grow: 1;
     text-align: center; 
 }
 
+nav #first {
+    border-left: 0;
+}
+
+nav #last {
+    border-right: 0;
+}
+
 nav a:hover {
-    background-color: rgb(61, 61, 61);
+    background-color: rgb(210, 210, 210);
 }
